# VirtualCamera_APK

./: CONVENTIONS.md  Dockerfile  README.md  android_ops.py  app-debug.apk  build.gradle  main()  module.prop  requirements.txt  settings.gradle
.github/workflows/: android.yml  build.yml
Ghost_Config_Engine/: README.md  ghost_identity_master.json  remediation_logic.py  sentry_audit.py  tee_mask.py
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  vcam_native.cpp
assets/: xposed_init
reference_code/VCamera-main/app/: build.gradle
reference_source/resources/: AndroidManifest.xml  classes.dex
reference_source/sources/a/: a.java  b.java  c.java  d.java  e.java  f.java  g.java  h.java  i.java  j.java
reference_source/sources/a0/: a.java  b.java  c.java
reference_source/sources/a1/: a.java  b.java
reference_source/sources/a2/: a.java  b.java  c.java  d.java
reference_source/sources/a3/: a.java
reference_source/sources/a4/: a.java  b.java  c.java  d.java  e.java
reference_source/sources/b/: a.java  b.java
reference_source/sources/b0/: a.java
reference_source/sources/b1/: a.java  b.java  c.java  d.java  e.java  f.java  g.java  h.java  i.java  j.java  k.java  l.java  m.java  n.java
reference_source/sources/b2/: a.java  b.java  c.java  d.java  e.java  f.java  g.java  h.java  i.java  j.java
reference_source/sources/b3/: a.java
reference_source/sources/b4/: a.java  a0.java  b.java  b0.java  c.java  c0.java  d.java  d0.java  e.java  e0.java  f.java  f0.java  g.java  g0.java  h.java  h0.java  (+21 more)
system/: camera.h
(+1150 files in other folders)
